--- a/src/main/resources/templates/post/posts_list.html
+++ b/src/main/resources/templates/post/posts_list.html
@@ -2,20 +2,30 @@
 <html lang="en" xmlns:th="www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <title>Posts</title>
+    <style>
+        body{
+            margin:20px;
+            padding:20px;
+        }
+        td, th{
+            margin:5px;
+            padding:5px;
+        }
+    </style>
 </head>
 <body>
-
 <table>
     <thead>
     <tr>
-        <th> hidden id </th>
+<!--        <th> hidden id </th>-->
         <th> Title </th>
         <th> Excerpt </th>
         <th> Author </th>
         <th> Published at </th>
         <th>Action</th>
-
     </tr>
     </thead>
     <tbody>
@@ -23,42 +33,19 @@
         <td colspan="2"> No Posts Available </td>
     </tr>
     <tr th:each="post : ${posts_list}">
-        <td><span th:text="${post.id}"></span> </td>
+<!--        <td><span th:text="${post.id}"></span> </td>-->
         <td><span th:text="${post.title}"> </span></td>
         <td><span th:text="${post.excerpt}"> </span></td>
         <td><span th:text="${post.author}"> </span></td>
         <td><span th:text="${post.published_at}"> </span></td>
-
-
-
         <td>
-            <!-- Add "update" button/link -->
-            <a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"
+            <a th:href="@{/showBlogPost(postId=${post.id})}"
                class="btn btn-info btn-sm">
-                Update
+                Read
             </a>
-
-            <!-- Add "delete" button/link -->
-            <a th:href="@{/employees/delete(employeeId=${tempEmployee.id})}"
-               class="btn btn-danger btn-sm"
-               onclick="if (!(confirm('Are you sure you want to delete this employee?'))) return false">
-                Delete
-            </a>
-
         </td>
-
     </tr>
     </tbody>
 </table>
-
-<form action="include_tag" method="post">
-    <input type="text" name="fname" placeholder="First name"/><br>
-    <input type="text" name="lname" placeholder="Last name"/><br>
-    <input type="text" name="email" placeholder="Email"/><br>
-    <button type="submit">Submit</button>
-</form>
-
-
-
 </body>
 </html>
