post update facility added

--- a/src/main/resources/templates/post/posts_list.html
+++ b/src/main/resources/templates/post/posts_list.html
@@ -24,7 +24,7 @@
     <div class="form-group-option">
         <div class="form-group-input">
             <form th:action="@{/}">
-                <input type="text" th:name="search"/>
+                <input type="text" th:name="search" placeholder="Search Something!!!"/>
                 <input type="submit"/>
             </form>
 
@@ -46,6 +46,9 @@
             <option value="opensource">Open Source</option>
         </select>
 
+        <form action="newpost" method="get">
+            <button type="submit">Create New Blog Post</button>
+        </form>
 
     </div>
 
