date included for filter

--- a/src/main/resources/templates/post/posts_list.html
+++ b/src/main/resources/templates/post/posts_list.html
@@ -53,6 +53,7 @@
                     <input type="checkbox" name="tag" value="motivation" th:checked="${tagsModel.getMotivation()}">Motivation
                     <input type="checkbox" name="tag" value="politics" th:checked="${tagsModel.getPolitics()}">Politics
                     <input type="checkbox" name="tag" value="culture" th:checked="${tagsModel.getCulture()}">Culture
+                    <br><input type="date" id="publishedAt" name="publishedAt">
                     <br><input type="submit" value="Apply Filter"/>
                 </div>
                 <div class="form-group-input" id="sort">
